add Linux build.sh script